--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "node-sass": "4.14.1",
+    "sass": "^1.59.3",
+    "sass-loader": "7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
