--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
+    "moment": "^2.29.4",
+    "node-sass": "4.14.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -20,11 +23,10 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
-    "node-sass": "4.14.1",
     "sass": "^1.59.3",
-    "sass-loader": "7.1.0"
+    "sass-loader": "7.1.0",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
