--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
+    "add": "^2.0.6",
+    "axios": "^1.5.1",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
     "moment": "^2.29.4",
