--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.16.1",
     "moment": "^2.29.4",
     "node-sass": "4.14.1",
+    "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-daum-postcode": "^3.1.3",
