--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.9.2",
     "sass": "^1.59.3",
     "sass-loader": "7.1.0",
     "uuid": "^9.0.0",
