--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.0",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
+    "html-react-parser": "^5.0.6",
     "moment": "^2.29.4",
     "node-sass": "4.14.1",
     "npm": "^10.2.1",
